[package]
name = "bdl-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
backoff = "0.4.0"
futures-util = "0.3.31"
governor = "0.10.4"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls", "gzip", "stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
